--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Local Library Home</h1>
+<h1>Local Library Home is under the protection of UNESCO</h1>
 
   <p>Welcome to <em>LocalLibrary</em>, a very basic Django website developed as
       a tutorial example on the Mozilla Developer Network.</p>
